# gtkam

./: .cvsignore  .gitignore  AUTHORS  CHANGES  COPYING  ChangeLog  INSTALL  Makefile.am  NEWS  README  TODO  acconfig.h  autogen.sh  configure.ac  configure.in  gtkam.desktop  gtkam.desktop.in  gtkam.spec.in  meson.build  meson_options.txt  xmldocs.make
art/: Makefile.am  meson.build
doc/: Makefile.am  gtkam.1  meson.build
help/: Makefile.am  meson.build
help/C/: Makefile.am  gtkam-C.omf  gtkam.xml
help/ru/: Makefile.am  Makefile.in  gtkam-ru.omf  gtkam.xml
libexif/: .cvsignore  ChangeLog  Makefile.am  acconfig.h  autogen.sh  configure.in
libexif/gexif/: Makefile.am  gexif-main.c
libexif/libexif/: Makefile.am  exif-content.c  exif-content.h  exif-data.c  exif-data.h  exif-entry.c  exif-entry.h  exif-tag.c  exif-tag.h  exif-utils.c  exif-utils.h
libexif/libexif-gtk/: Makefile.am  gtk-exif-browser.c  gtk-exif-content-list.c  gtk-exif-content-list.h  gtk-exif-entry-9209.c  gtk-exif-entry-9209.h  gtk-exif-entry-ascii.c  gtk-exif-entry-date.c  gtk-exif-entry-flash.c  gtk-exif-entry-generic.c  gtk-exif-entry-light.c  gtk-exif-entry-light.h  gtk-exif-entry-menu.c  gtk-exif-entry-menu.h  gtk-exif-entry-meter.c  gtk-exif-entry-meter.h  gtk-exif-entry-resolution.c  gtk-exif-entry-resolution.h  gtk-exif-entry-version.c  gtk-exif-entry.c  gtk-exif-entry.h  gtk-exif-tag-menu.c  gtk-exif-tree.c
libexif/libexif-gtk/gtk-extensions/: gtk-options.c
libexif/libjpeg/: Makefile.am  jpeg-data.c  jpeg-data.h  jpeg-marker.c  jpeg-marker.h
libexif/test/: .cvsignore  test-browser.c  test-tree.c
m4/: .gitignore
omf-install/: .cvsignore  Makefile.am  gtkam-C.omf  gtkam-C.omf.in  meson.build
packaging/: Makefile.am
packaging/rpm/: Makefile.am  package.spec.in
pixmaps/: Makefile.am  meson.build
po/: .cvsignore  ChangeLog  LINGUAS  POTFILES.in  be.po  cs.po  da.po  de.po  eo.po  es.po  fi.po  fr.po  gtkam.pot  he.po  hu.po  id.po  is.po  it.po  ja.po  meson.build  nb.po  nl.po  no.po  pa.po  pl.po  pt.po  pt_BR.po  pt_PT.po  ro.po  ru.po  sk.po  sl.po  sr.po  sv.po  uk.po  vi.po  zh_CN.po
src/: .cvsignore  Makefile.am  callbacks.c  callbacks.h  frontend.c  frontend.h  gdk-pixbuf-hacks.c  gdk-pixbuf-hacks.h  gtkam-camera.c  gtkam-camera.h  gtkam-cancel.c  gtkam-cancel.h  gtkam-chooser.c  gtkam-chooser.h  gtkam-clist.c  gtkam-clist.h  gtkam-clock.c  gtkam-clock.h  gtkam-close.c  gtkam-close.h  gtkam-config.c  gtkam-config.h  gtkam-context.c  gtkam-context.h  gtkam-debug.c  gtkam-debug.h  gtkam-delete.c  gtkam-delete.h  gtkam-dialog.c  gtkam-dialog.h  gtkam-error.c  gtkam-error.h  gtkam-exif.c  gtkam-exif.h  gtkam-fsel.c  gtkam-fsel.h  gtkam-gimp.c  gtkam-info.c  gtkam-info.h  gtkam-list.c  (+39 more)
test/: .cvsignore  Makefile.am  meson.build  test-cancel.c  test-fsel.c
