imagesdir = $(datadir)/images/gtkam
images_DATA =			\
	gtkam-audio.png		\
	gtkam-camera.png        \
	gtkam-folder.png	\
	gtkam-folder-camera.png	\
	gtkam-lock.png		\
	gtkam-new.png

icondir = $(datadir)/pixmaps
icon_DATA = gtkam-camera.png
EXTRA_DIST =			\
	$(images_DATA)          \
	$(icon_DATA)

