AC_INIT(libexif/exif.h)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(libexif, 0.1)
AM_MAINTAINER_MODE

LIBEXIF_VERSION_INFO=0:1:0
AC_SUBST(LIBEXIF_VERSION_INFO)

AC_PROG_LIBTOOL

dnl ---------------------------------------------------------------------------
dnl i18n support
dnl ---------------------------------------------------------------------------
dnl ALL_LINGUAS=""
dnl AM_GNU_GETTEXT

dnl ---------------------------------------------------------------------------
dnl gtk-support
dnl ---------------------------------------------------------------------------
have_gtk=false
gtk_msg=no
AC_PATH_PROG(GTK_CONFIG,gtk-config)
if test "${GTK_CONFIG}"; then
	have_gtk=true;
	gtk_msg=yes
	GTK_CFLAGS=`gtk-config --cflags`
	GTK_LIBS=`gtk-config --libs`
fi
AC_SUBST(GTK_CFLAGS)
AC_SUBST(GTK_LIBS)
AM_CONDITIONAL(HAVE_GTK, $have_gtk)

dnl ---------------------------------------------------------------------------
dnl Warnings
dnl ---------------------------------------------------------------------------
CFLAGS="$CFLAGS -g -Wall -Wmissing-declarations -Wmissing-prototypes"
LDFLAGS="$LDFLAGS -g -Wall"
AC_SUBST(CFLAGS)
AC_SUBST(LDFLAGS)

AC_OUTPUT([
Makefile
libexif/Makefile
libexif-gtk/Makefile
libjpeg/Makefile
test/Makefile
libexif.pc
])

echo "

Configuration:

	Source code location:  ${srcdir}
	Compiler:              ${CC}

	GTK support:           $gtk_msg
"
